--- a/download.html
+++ b/download.html
@@ -6,6 +6,9 @@
 </head>
 <body>
     <h1>下载catoiOS</h1>
-    <p>最新版本下载链接：<b><a href="https://pan.huang1111.cn/s/4XMWhg">catoiOS2.0.1.195</a></b></p>
+    <p>最新版本下载链接：<b><a href="https://pan.huang1111.cn/s/dkkjMHV">catoiOS2.0.2.74</a></b>
+    <br />
+        在2024年8月1日更新。
+    </p>
 </body>
 </html>
