--- a/download.html
+++ b/download.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>下载catoiOS</h1>
-    <p>最新版本下载链接：<b><a href="https://pan.huang1111.cn/s/dkkjMHV">catoiOS2.0.2.74</a></b>
+    <p>最新版本下载链接：<b><a href="https://pan.huang1111.cn/s/75k3Big" title="mcr130102开发，这个网站也是我建的信吧">catoiOS2.0.2.87</a></b>
     <br />
         在2024年8月1日更新。
     </p>
