--- a/about/index.html
+++ b/about/index.html
@@ -1,3 +1,27 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8"> 
+<title>介绍</title> 
+<style>
+.center { 
+    height: 200px;
+    position: relative;
+    border: 3px solid green; 
+}
+
+.center p {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+</style>
+</head>
+<body>
+<div class="center">
 <h1>catoiOS是什么？</h1>
 <p>
 catoiOS（cats Olympiad in Informatics Open System），是一个丰富多样的开放系统，其代码符合跨平台要求。
@@ -9,3 +33,4 @@ catoiOS（cats Olympiad in Informatics Open System），是一个丰富多样的
 <a href="/catoiOS/download.html">下载catoiOS</a>
 <h1>我可以一起开发吗？</h1>
 <p>当然，您可以申请加入开发部。您可以在上面提到的官网申请。开发部主要是开发各种游戏或工具的团体。</p>
+</div>
