--- a/download/index.html
+++ b/download/index.html
@@ -23,6 +23,6 @@
 <body>
     <h1>Download</h1>
 <div class="center">
-  <p>最新版本下载链接：<b><a href="https://pan.huang1111.cn/s/75k3Big" title="mcr130102开发，这个网站也是我建的信吧">catoiOS2.0.2.87</a></b>
-<br />在2024年8月3日，第二次更新，第一个补丁。</p>
+  <p>最新版本下载链接：<b><a href="https://pan.huang1111.cn/s/2v3WXTN" title="mcr130102开发，这个网站也是我建的信吧">catoiOS2.0.3.41</a></b>
+<br />在2024年8月20日，第1次更新，第0个补丁。</p>
 </div>
