--- a/download/index.html
+++ b/download/index.html
@@ -21,8 +21,9 @@
 </style>
 </head>
 <body>
-    <h1>Download</h1>
+    <h1>Download catoiOS</h1>
 <div class="center">
   <p>最新版本下载链接：<b><a href="https://pan.huang1111.cn/s/2v3WXTN" title="mcr130102开发，这个网站也是我建的信吧">catoiOS2.0.3.41</a></b>
 <br />在2024年8月20日，第1次更新，第0个补丁。</p>
+    <p>10月1日下午三点将发布catoiOS2.0.4国庆节版本</p>
 </div>
