--- a/QQ.html
+++ b/QQ.html
@@ -5,7 +5,7 @@
 <title>菜鸟教程(runoob.com)</title>
 </head>
 <body>
-    <h1>快捷加入QQ</h1>
-    <p>点击链接加入群聊【catoiOS开发部】：https://qm.qq.com/q/G9ClGsAM4E<br />群号：597905192</p>
+    <h1>快捷加入QQ群</h1>
+    <p>群号：249130167</p>
 </body>
 </html>
