--- a/dev.html
+++ b/dev.html
@@ -5,9 +5,9 @@
 <title>dev</title>
 </head>
 <body>
-    <p>catoiOS本来就是为了广大OIer开发的。所以开发者可以申请加盟。</p>
+    <p>catoiOS本来就是为了广大OIer开发的。所以开发者可以申请加盟。我们欢迎开发者加入。加入后可以将您的作品上传</p>
   <p>catoiOS加盟QQ群号：597905192</p>
   <h1>加盟须知</h1>
-  <p>在您加入catoiOS加盟团队时，您会自动被赋予catoiOS代言人的身份，同时您也会获得catoiOS的部分源代码。您不可以泄露catoiOS所提供的源代码，您同样需要遵守catoiOS的用户条款。您不可以将catoiOS提供给您的源代码用于其他用途。您不可以与其他组织合作对catoiOS进行不良影响。您所提交的代码将会被catoiOS收录，catoiOS有权对您的作品的不当内容进行修改和删除。您提交的作品的版权归catoiOS DEF Team 所有，您也可以在提交作品时要求将作品的版权归自己所有。您提交的作品如果违反中华人民共和国以及联合国的法律catoiOS不负任何责任。当您加入catoiOS加盟的QQ群时代表您同意并决定遵守以上全部条款。</p>
+  <p>在您加入catoiOS加盟团队时，您会自动被赋予catoiOS代言人的身份，同时您也会获得catoiOS的部分源代码。您不可以泄露catoiOS所提供的源代码，您同样需要遵守catoiOS的用户条款。您不可以将catoiOS提供给您的源代码用于其他用途。您不可以与其他组织合作对catoiOS进行不良影响。您所提交的代码将会被catoiOS收录，catoiOS有权对您的作品的不当内容进行修改和删除。您提交的作品的版权归catoiOS DEV Team 所有，您也可以在提交作品时要求将作品的版权归自己所有。您提交的作品如果违反中华人民共和国以及联合国的法律catoiOS不负任何责任。当您加入catoiOS加盟的QQ群时代表您同意并决定遵守以上全部条款。</p>
 </body>
 </html>
