--- a/music.html
+++ b/music.html
@@ -5,11 +5,15 @@
 <title>菜鸟教程(runoob.com)</title>
 </head>
 <body>
+    <h1>catoiOS主题曲</h1>
+    <p>这里有两首歌曲，歌词一样。由AI生成。允许下载。</p>
+    <img alt="Album Cover" class="w-24 h-24 rounded-l-lg" src="https://cdn2.suno.ai/image_8b7d514a-9520-4d45-9ee8-035f4ff68797.jpeg">
     <audio controls>
   <source src="https://cdn1.suno.ai/8b7d514a-9520-4d45-9ee8-035f4ff68797.mp3" type="audio/mpeg">
   您的浏览器不支持 audio 标签。请使用主流浏览器或者升级您的操作系统。    
 </audio>
   <br />
+    <img alt="Album Cover" class="w-24 h-24 rounded-l-lg" src="https://cdn2.suno.ai/image_fb339bbf-e624-4a61-affb-f9d0f63921b8.jpeg">
   <audio controls>
   <source src="https://cdn1.suno.ai/fb339bbf-e624-4a61-affb-f9d0f63921b8.mp3" type="audio/mpeg">
   您的浏览器不支持 audio 标签。请使用主流浏览器或者升级您的操作系统。    
