--- a/music.html
+++ b/music.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>菜鸟教程(runoob.com)</title>
+<title>catoiOS主题曲播放</title>
 </head>
 <body>
     <h1>catoiOS主题曲</h1>
