--- a/download/index.html
+++ b/download/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <meta charset="utf-8"> 
-<title>下载</title> 
+<title>下载catoiOS</title> 
 <style>
 .center { 
-    height: 300px;
+    height: 100px;
     position: relative;
-    border: 3px solid green; 
+    border: 3px solid blue; 
 }
 
 .center p {
@@ -25,5 +25,8 @@
 <div class="center">
   <p>最新版本下载链接：<b><a href="https://pan.huang1111.cn/s/ggqM6sQ" title="mcr130102开发，这个网站也是我建的信吧">catoiOS2.0.4.14</a></b>
 <br />在2024年10月1日，第1次更新，第0个补丁。</p>
-    <p>10月1日下午三点将发布catoiOS2.0.4国庆节版本</p>
 </div>
+    <h1>2024年的更新频率</h1>
+<div class="center>
+    <p>每月的1日至5日更新，期间会发布补丁。</p>
+    </div>
