--- a/download/index.html
+++ b/download/index.html
@@ -23,8 +23,8 @@
 <body>
     <h1>Download catoiOS</h1>
 <div class="center">
-  <p>最新版本下载链接：<b><a href="https://pan.huang1111.cn/s/ggqM6sQ" title="mcr130102开发，这个网站也是我建的信吧">catoiOS2.0.4.14(2024国庆节版本)</a></b>
-<br />在2024年10月1日，第1次更新，第0个补丁。</p>
+  <p>最新版本下载链接：<b><a href="https://pan.huang1111.cn/s/3e3nnCm" title="mcr130102开发，这个网站也是我建的信吧">catoiOS2.0.5.2</a></b>
+<br />在2024年11月2日，第1次更新，第0个补丁。</p>
 </div>
     <h1>2024年的更新频率</h1>
 <div class="center>
