--- a/about/index.html
+++ b/about/index.html
@@ -1,36 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
-<meta charset="utf-8"> 
-<title>介绍</title> 
-<style>
-.center { 
-    height: 200px;
-    position: relative;
-    border: 3px solid green; 
-}
-
-.center p {
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>catoiOS介绍</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+        }
+       .container {
+            width: 80%;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+        }
+        h1 {
+            color: #333;
+            text-align: center;
+        }
+        p {
+            color: #666;
+            line-height: 1.6;
+        }
+    </style>
 </head>
 <body>
-<div class="center">
-<h1>catoiOS是什么？</h1>
-<p>
-catoiOS（cats Olympiad in Informatics Open System），是一个丰富多样的开放系统，其代码符合跨平台要求。
-  <br>
-它包含游戏、工具，还有个性化设置。包括各种活动在内，catoiOS致力于满足用户的所有需求.
-  </p>
-<h1>如何查看、下载catoiOS</h1>
-<a href="/catoiOS">catoiOS官网</a>
-<a href="/catoiOS/download.html">下载catoiOS</a>
-<h1>我可以一起开发吗？</h1>
-<p>当然，您可以申请加入开发部。您可以在上面提到的官网申请。开发部主要是开发各种游戏或工具的团体。</p>
-</div>
+    <div class="container">
+        <h1>catoiOS介绍</h1>
+        <p>catoiOS是一款具有独特魅力的产品。在这个网页上，你可以轻松找到下载最新版catoiOS的入口，获取产品的最新版本。同时，catoiOS用户交流QQ群为用户们提供了一个交流互动的空间，方便大家分享使用心得、交流问题解决方法。</p>
+        <p>网页中的“新闻面板”“开发界面”“核心团网”等板块，能让你深入了解产品的动态、开发进展以及背后的核心团队信息。“catoiOS介绍”板块详细阐述了产品的特点和优势，帮助你更好地认识这款产品。</p>
+        <p>如果你有合作意向或其他疑问，可以通过“联系站长”与网站运营者取得联系。“加入我们”则为有志于参与catoiOS项目的人提供了机会。此外，“优秀开发者的专属主页”展示了优秀开发者的风采，“catoiOS主题曲”更是为产品增添了一份独特的文化氛围。</p>
+    </div>
+</body>
+</html>
