--- a/download/index.html
+++ b/download/index.html
@@ -23,15 +23,12 @@
 <body>
     <h1>Download catoiOS</h1>
 <div class="center">
-  <p>最新版本下载链接：<b><a href="https://mcr130102.lanzoul.com/iKhD12irliah" title="mcr130102开发，这个网站也是我建的信吧">catoiOS2.0.7.26</a></b>
+  <p>最新版本下载链接：<b><a href="https://mcr130102.lanzoul.com/i5XS92mdkwhc" title="mcr130102开发，这个网站也是我建的信吧">catoiOS2.0.7.26</a></b>
       
 <br />在2024年12月22日，第1次更新，第0个补丁。</p>
 </div>
-    <p>密码：1koa</p>
-    <p>密码：1koa</p>
-    <p>密码：1koa</p>
-    <p>密码：1koa</p><p>密码：1koa</p><p>密码：1koa</p><p>密码：1koa</p><p>密码：1koa</p><p>密码：1koa</p><p>密码：1koa</p><p>密码：1koa</p><p>密码：1koa</p><p>密码：1koa</p><p>密码：1koa</p><p>密码：1koa</p><p>密码：1koa</p><p>密码：1koa</p><p>密码：1koa</p>
-    <h1>2024年的更新频率</h1>
+    <p>密码：9bwm</p>
+    <h1>2025年的更新频率</h1>
 <div class="center>
     <p>每月的1日至5日更新，期间会发布补丁。</p>
     </div>
