--- a/about/index.html
+++ b/about/index.html
@@ -31,7 +31,11 @@
 <body>
     <div class="container">
         <h1>catoiOS介绍</h1>
-        <p>catoiOS是一款具有独特魅力的产品。在这个网页上，你可以轻松找到下载最新版catoiOS的入口，获取产品的最新版本。同时，catoiOS用户交流QQ群为用户们提供了一个交流互动的空间，方便大家分享使用心得、交流问题解决方法。</p>
+        <h2>这是啥？</h2>
+        <p>catoiOS是一个命令行程序，它的寓意是为OIer提供的Opening System(开放系统)。几乎全部由mcr130102创始和维护(讽刺不干活的开发部成员)。</p>
+        <p>catoiOS是开放的，它会不断地更新，也会采纳大家的意见。如果你有一些建议，可以加入我们的QQ群(249130167)</p>
+        <h2>功能介绍</h2>
+        <p>catoiOS是一款具有独特魅力的产品。在官网上，你可以轻松找到下载最新版catoiOS的入口，获取产品的最新版本。同时，catoiOS用户交流QQ群为用户们提供了一个交流互动的空间，方便大家分享使用心得、交流问题解决方法。</p>
         <p>网页中的“新闻面板”“开发界面”“核心团网”等板块，能让你深入了解产品的动态、开发进展以及背后的核心团队信息。“catoiOS介绍”板块详细阐述了产品的特点和优势，帮助你更好地认识这款产品。</p>
         <p>如果你有合作意向或其他疑问，可以通过“联系站长”与网站运营者取得联系。“加入我们”则为有志于参与catoiOS项目的人提供了机会。此外，“优秀开发者的专属主页”展示了优秀开发者的风采，“catoiOS主题曲”更是为产品增添了一份独特的文化氛围。</p>
     </div>
