--- a/download/index.html
+++ b/download/index.html
@@ -23,12 +23,15 @@
 <body>
     <h1>Download catoiOS</h1>
 <div class="center">
-  <p>最新版本下载链接：<b><a href="https://mcr130102.lanzoul.com/i5XS92mdkwhc" title="mcr130102开发，这个网站也是我建的信吧">catoiOS2.0.7.26</a></b>
+  <p>最新版本下载链接：<b><a href="https://mcr130102.lanzoul.com/i5XS92mdkwhc" title="mcr130102开发，这个网站也是我建的信吧">catoiOS2.0.8</a></b>
       
-<br />在2024年12月22日，第1次更新，第0个补丁。</p>
+<br />在2024年2月1日，第1次更新，第0个补丁。</p>
 </div>
-    <p>密码：9bwm</p>
+    <div class="center">
+  p>密码：9bwm</p>
+</div>
+    <
     <h1>2025年的更新频率</h1>
 <div class="center>
     <p>每月的1日至5日更新，期间会发布补丁。</p>
-    </div>
+</div>
